--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "emojinary",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Charades but with 100% emoji",
   "main": "server/server.js",
   "scripts": {
@@ -24,5 +24,10 @@
     "express": "~4.13.0",
     "socket.io": "~1.3.5",
     "body-parser": "~1.13.2"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.3.2"
   }
 }
