--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Charades but with 100% emoji",
   "main": "server/server.js",
   "scripts": {
+    "postinstall": "grunt",
     "test": "node server/server.js"
   },
   "repository": {
@@ -23,10 +24,9 @@
   "dependencies": {
     "express": "~4.13.0",
     "socket.io": "~1.3.5",
-    "body-parser": "~1.13.2"
-  },
-  "devDependencies": {
-    "grunt": "~0.4.1",
+    "body-parser": "~1.13.2",
+    "grunt": "~0.4.5",
+    "grunt-cli": "~0.1.13",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.3.2",
     "grunt-contrib-sass": "~0.9.2"
