--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "grunt-cli": "~0.1.13",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.3.2",
-    "grunt-contrib-sass": "~0.9.2"
+    "grunt-sass": "^1.1.0"
   }
 }
